:active is hierarchical too, who knew?

--- a/pseudo-elements.html
+++ b/pseudo-elements.html
@@ -41,17 +41,13 @@
       font-family: sans-serif;
       font-variant: small-caps;
     }
+    
+    #summary::first-line:hover {
+      color: blue;
+    }
 
     #summ-parent {
       color: #111;
-    }
-
-    #summ-parent::first-letter {
-      color: red;
-    }
-    
-    #summ-parent::first-line {
-      font-style: italic;
     }
 
   </style>
