--- a/fonts/fontscreens.html
+++ b/fonts/fontscreens.html
@@ -21,9 +21,10 @@
 
 <body>
 	<div id="main">
-	  <img src="greyed-out.png"/>
-	  <img src="seperate-linethrough.png"/>
+      <img src="italic.png"/>
 	  <img src="dotted-underline.png"/>
+      <img src="seperate-linethrough.png"/>
+      <img src="greyed-out.png"/>
 	  <img src="bracketed-item.png"/>
 	</div>
 </div>
