initial color scheme finder

--- a/fonts.html
+++ b/fonts.html
@@ -17,6 +17,7 @@
 
     <p id="no-font">please join to group to get updates on the latest meetups</p>
     <p id="fallback-font">go to meetup.com and register</p>
+    <p id="fprop">this is a rule with a "font" property</p>
   </section>
 </body>
 </html>
