add imported stylesheet test

--- a/scheme/test.html
+++ b/scheme/test.html
@@ -130,6 +130,12 @@ console.log(upper);
       </div>
     </div>
   </div>
-  <footer></footer>
+  <footer>
+    <div class="color-selector" data-class="language-javascript, .language-css, .language-markup">
+      <input class="color-swatch"></input>
+      <input class="color-value"></input>
+      <div class="color-label">background</div>
+    </div>
+  </footer>
 </body>
 </html>
