throw real error

--- a/filters.html
+++ b/filters.html
@@ -18,6 +18,7 @@
     console.error("an error");
     console.info("an info");
     console.warn("a warning");
+    throw new Error('a *real* error');
   </script>
 </head>
 <body>
